clusters/central-tx-san-101/imdb/imdb/ingressHttps.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: imdb
  namespace: imdb
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/ingress.class: contour
    kubernetes.io/tls-acme: "true"

spec:
  tls:
  - secretName: imdb
    hosts:
    - central-tx-san-101.cseretail.com
  rules:
  - host: central-tx-san-101.cseretail.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: imdb
            port:
              number: 8080
